Change Log

2009-05-11
	Fix: PRINT-CODE handled QUOTE inside of QUASIQUOTE incorrectly.
	(contrib/print-code.scm)
2009-05-10
	Minor fix: protected car(x) in syntax_object_p().
	Cosmetics.
	Changed allocation strategy. We will now use half of the
	memory pool at most. OK, this gives us the same space
	efficiency as a copying collector, but with the advantage
	of having cons objects in fixed places on the heap. The
	performance gain is about 35% (zebra puzzle).
2009-05-09
	Minor fix: protected argument in pp_load().
	Made conceptual difference between string and symbol names
	[string() vs. symbol_name(), string_len() vs. symbol_len()].
	Removed clone_string() due to above separation.
	Using O(1) string_len() instead of O(n) strlen() in pp_gensym().
	Checking length first in STRING=? and STRING-CI=?.
2009-05-07
	Fix: PRINT-CODE generated tag soup when two subsequent
	tokens were to be printed in boldface.
	Added another tweak for Unix portability to s9.h.
2009-05-06
	Administrative change:
	- #ifdef __unix and #ifdef unix are obviously insufficient
	  to check for a Unix system; added -Dunix to Makefile.
	Thanks, Barak Pearlmutter!
2009-05-05
	- Applied some fixes to the build process.
	- Created browsable version of the library code.
	- Added version tag (timestamp) to distribution file.
	- Added deinstall target to Makefile.
2009-05-04
	Replaced '| by ': in ML-style syntax of DEFINE-MATCH,
	because '| is not portable.
	Removed MAP-CAR from documentation, because it is only
	used internally.
	Simplified definition of LETREC (cosmetics).
	Made the code printer generate links to files included
	via LOAD-FROM-LIBRARY. (contrib/print-code.scm)
2009-05-03
	Added a pattern matcher with optional support for ML syntax
	to the library. (lib/define-match.scm)
	Updated the test suite.
	Moved the online help system to contrib. (contrib/help.scm)
	Moved DRAW-TREE to contrib. (contrib/draw-tree.scm)
	Included the pretty-printer and the online help system in