@@ -4,11 +4,14 @@
 # Change at least this line:
 PREFIX= /u
 
-VERSION= 20090511
+VERSION= 20090512
 
 # Extras to be added to the heap image
 EXTRA_STUFF=	-f contrib/help.scm \
 		-f contrib/pretty-print.scm
+
+# Set up environment to be used during the build process
+BUILD_ENV=	env S9FES_LIBRARY_PATH=.:lib:contrib
 
 # Override default compiler and flags
 #CC=	gcc
@@ -39,39 +42,39 @@ s9:	s9.c s9.h
 	$(CC) $(CFLAGS) $(DEFS) -o $@ s9.c
 
 s9.image:	s9 s9.scm
-	rm -f $@ && env S9FES_LIBRARY_PATH=.:lib ./s9 -n $(EXTRA_STUFF) -d $@
+	rm -f $@ && $(BUILD_ENV) ./s9 -n $(EXTRA_STUFF) -d $@
 
 s9e:	s9e.o $(EXTOBJ)
-	$(CC) $(CFLAGS) -o $@ s9e.o $(EXTOBJ)
+	$(CC) $(CFLAGS) -o $@ $>
 
 s9e.scm:	s9.scm
 	ln -s s9.scm $@
 
 s9e.o:	s9.c
 	$(CC) $(CFLAGS) $(DEFS) -I . -DEXTENSIONS="$(EXTINI)" $(EXTDEF) \
-		-o $@ -c s9.c
+		-o $@ -c $>
 
 unix.o:	ext/unix.c
-	$(CC) $(CFLAGS) -I . -o unix.o -c ext/unix.c
+	$(CC) $(CFLAGS) -I . -o unix.o -c $>
 
 s9e.image:	s9e s9e.scm ext/system.scm
-	rm -f $@ && env S9FES_LIBRARY_PATH=.:lib \
-			./s9e -n -f ext/system.scm $(EXTRA_STUFF) -d $@
+	rm -f $@ && \
+	$(BUILD_ENV) ./s9e -n -f ext/system.scm $(EXTRA_STUFF) -d $@
 
 s9.1.gz:	s9.1
-	sed -e "s,@LIBDIR@,$(LIBDIR)," <$? |gzip -9 >$@
+	sed -e "s,@LIBDIR@,$(LIBDIR)," <$> |gzip -9 >$@
 
 s9e.1.gz:	s9e.1
-	sed -e "s,@LIBDIR@,$(LIBDIR)," <$? |gzip -9 >$@
+	sed -e "s,@LIBDIR@,$(LIBDIR)," <$> |gzip -9 >$@
 
 lint:
 	gcc -g -Wall -ansi -pedantic s9.c && rm a.out
 
 test:	s9 s9.image
-	./s9 -nf test.scm
+	$(BUILD_ENV) ./s9 -nf test.scm
 
 libtest:	s9 s9.image
-	sh libtest.sh
+	$(BUILD_ENV) sh libtest.sh
 
 # old version of install(1) may need -c
 #C=-c
