@@ -413,7 +413,7 @@ is any combinations of the letters
 .IR write ,
 and
 .IR execute
-permission, respectively). The letter 
+permission, respectively). The letter
 .I a
 may be used to abbreviate
 .IR ugo .
@@ -592,7 +592,7 @@ See
 .in -4
 .sp
 .ne 2
-.B "(group-name string|integer) ==> string 
+.B "(group-name string|integer) ==> string
 .in +4
 Return the group name for the group \fPstring\fP or the group ID \fBinteger\fP.
 (Yes, getting a group name for a group name is an identity operation.)
@@ -674,7 +674,7 @@ Return the size of the file \fPstring\fP.
 .in -4
 .sp
 .ne 3
-.B "(stat-uid string) ==> integer 
+.B "(stat-uid string) ==> integer
 .in +4
 Return the UID of the owner of the file \fPstring\fP.
 .in -4
